--- a/2.Anatomia.md
+++ b/2.Anatomia.md
@@ -65,3 +65,122 @@ tre operandi. ci stiamo avvicinando, come astrazione, alla macchina finale.
 Rappresentare il tutto diventa molto semplice: ho delle tabelle con semplice struttura a record che è facile da riordinare.
 In particolare ogni record ha quattro campi di cui l'ultimo opzionale. Un'altra versione con delle triple è che la
 destinazione viene codificata con il numero dell'istruzione.
+
+## SSA
+
+Ogni variabile è definita (assenata) una sola volta. Per ogni variabile è facile avere una lista degli usi.
+
+In SSA è immediato propagare il valore costante di una definizione ai suoi usi e si hanno vantaggi anche
+con altre ottimizzazioni.
+
+Bisogna scegliere la IR col giusto livello di dettaglio per il compito dasvolgere. Non esista una IR perfetta per tutti
+gli scopi ma possiamo anche implementare delle IR ibride.
+
+Ad esempio coi salti ho bisogno di sapere il valore prossimo del PC, informazione che le IR sotto forma di listato non
+mi danno. Oppure se devo trattare ottimizzazioni che si estendono oltre ai boundaries delle singole funzioni.
+
+## Control flow graph
+
+Forma ibrida di rappresentazione intermedia: contiene l'informazione relativa alle singole istruzioni e informazione
+relativa al control flow.
+
+Quello che mancava fin'ora è la mancanza di trasferimento del controllo in un programma.
+
+### Basic block
+
+> È una sequenza legale di istruzioni, terminata da un'istruzione di trasferimento del controllo.
+
+La nozione di trasferimento del controllo permette di **alterare il PC in modo non lineare**. L'alterazione del
+PC infatti viene controllata da un multiplexer i cui ingressi sono due adder:
+
+- il primo incrementa sempre il program counter di 4, quindi di 32 bit, oppure della dimensione di un'istruzione della
+particolare architettura;
+
+- il secondo sommatore prende sempre il valore di PC al passo attuale e somma un valore che proviene dall'istruzione
+stessa, ovvero l'immediato che proviene dall'istruzione di branch.
+
+```
+beq s1, s2, 0ximm
+```
+
+il sommatore prende l'immediato, lo moltiplica per due per salvare un bit in RISC-V, e lo somma al valore corrente
+di PC.
+
+Quindi secondo la definizione di blocco, questo:
+
+```
+i1
+i2
+i3
+beq l1
+```
+
+è un blocco, perché termina con un'istruzione di trasferimento del controllo di flusso.
+Gli archi rappresentano il trasferimento di controllo nel programma tra basic block.
+
+### Definizione formale
+
+> Formalmente un basic block $B_i$ è una sequenza di istruzioni in forma 3AC tale che:
+> - solo la prima istruzione può essere raggiunta dall'esterno, quindi ho un singolo _basic block_
+> - e tutte le istruzioni vengono eseguite se viene eseguita la prima, quindi abbiamo un singolo exit point.
+
+> **Single entry, single exit = SESE** è una proprietà del basic block.
+
+È possibile definire regioni più grandi del mio programma che rispettino questa regola.
+
+> Un arco connette due nodi $B_i \to B_j$ se e solo se $B_j$ può eseguire dopo $B_i$ in qualche percorso del flusso di
+> controllo del programma.
+>
+> - La prima istruzione di $B_j$ è il target del salto al termine di $B_i$ e
+> - $B_j$ è l'unico successore di $B_i$ che non ha un'istruzione di salto come ultima istruzione (fallthrough).
+
+Il secondo caso avviene se l'ultima istruzione del basic block non è un branch, quindi altero il program counter nel
+modo classico (aggiungendo 4).
+
+### Normalizzazione del CFG
+
+Un CFG normalizzato ha i basic block massimali, ovvero normalizzo gli archi fallthrough fondendo i nodi.
+
+### Costruzione (algoritmo)
+
+1. Identificare il _leader_ di ogni basic block. Ovvero:
+    - la prima istruzione
+    - il target di un salto (quando ho una label)
+    - ogni istruzione dopo un salto
+
+    così possiamo aggiungere gli archi.
+
+    Assegnando una label a un branch, questo costituirà un blocco a parte con una singola istruzione.
+
+### Dependency graph
+
+Le dipendenze sono il fenomeno alla base dei data hazard. I nodi di un DG sono istruzioni che usano dei vlaori e ne
+definiscono altri. Mi permettono di fare analisi dei data hazard a livello di compilatore, e inserire le nop, perché con
+questa rappresentazione si riesce a fare instruction scheduling.
+
+Gli archi di un DG connettono due nodi, uno dei quali usa i risultati definiti dall'altro.
+
+Il polyhedral model è un DDG avanzato che tratta ogni iterazione del loop come un punto all'interno di un poliedro,
+questo semplifica la trasformazione dello spazio delle iterazioni.
+
+```
+for (i=1; i<N; i++)
+    A[i] = A[i-1];
+```
+
+come faccio a capire se questo loop è parallelizzabile su più processori?
+
+In LLVM c'è un framework chiamato polly (polyhedral analysis), mentre in GCC c'è graphite. Nell'era del parallelismo
+massiccio ogni compilatore ha un framework di DDG.
+
+### Call graph
+
+Mostra l'insieme delle potenziali chiamate tra funzioni, gerarchicamente.
+
+Un programma può anche essere distribuito su più file, che darà origine a un call graph. Per ogni funzione avremo il
+CFG e 3AC-SSA. Cosa succede però se il mio programma è scritto sfruttando molti file?
+
+Si fa intervenire un framework di ottimizzazione più complesso, vado a fare _whole program analysis_ che richiede una
+infrastruttura complicata che viene gestita a link time. Il framework è di tipo LTO: link time optimization.
+
+[Link time optimizer MSVC](https://learn.microsoft.com/en-us/cpp/build/reference/gl-whole-program-optimization?view=msvc-170)
