Added cmake for aarch64 target only

--- a/3.Passi.md
+++ b/3.Passi.md
@@ -14,6 +14,12 @@ in rappresentazione intermedia non vedevamo alcuna chiamata a funzione.
 
 `licm` fa loop invariant code motion, spostando gli statement che non dipendono dal loop fuori dal loop stesso.
 
+## Preparazione compilazione
+
+```
+cmake -S llvm -B build -G "Unix Makefiles" -DLLVM_TARGETS_TO_BUILD="AArch64" -DCMAKE_BUILD_TYPE=Debug -DCMAKE_INSTALL_PREFIX=$(pwd)/install
+```
+
 ## Implementazione di un passo
 
 Un passo LLVM eredita da `PassInfoMixin<PassT>` seguendo il pattern CRTP mix-in.
