Implemented LocalOpts ex 2 and fixed Makefile

--- a/4.Trasformazioni.md
+++ b/4.Trasformazioni.md
@@ -29,3 +29,10 @@ z = y + 3;
 
 Il primo statement in forma SSA diventa y1, quindi LLVM non mostra alcun User associato alla prima istruzione. z1
 infatti usa l'istruzione y2.
+
+## Strength reduction
+
+`LocalOpts.cpp` come pass module.
+
+Alla fine di LocalOpts non eliminiamo l'istruzione, ci pensa il passo di DCE visto che l'istruzione definisce una
+variabile dead.
