loop and dominator use

--- a/7.Chains.md
+++ b/7.Chains.md
@@ -9,3 +9,7 @@ Proprietà della forma SSA
 
 In forma SSA abbiamo diversi concetti che coincidono: definizioni e variabili. Istruzioni e valori. Operandi e archi di
 un DFG.
+
+## Cos'è
+
+È un modo di semplificare le informazioni estratte dalla data flow analysis.
