Array, matrices mult, loop fusion, prefetching

--- a/11.MemoryOpt.md
+++ b/11.MemoryOpt.md
@@ -135,3 +135,143 @@ Dove non riesco ad allinearmi semplicemente cambiando posto ai campi, posso fare
 che siano allineati.
 
 Per ottimizzare posso trasformare la struttura, spezzandola.
+
+## Ottimizzazioni array
+
+Strutture molto regolari, anche multidimensionali e facili da ottimizzare a compile time; quindi a seguito di un'analisi
+statica.
+
+Per rappresentare gli accessi in memoria uso un poliedro, chiamato iteration space che definisce l'ordine di visita degli
+elementi dell'array.
+
+Abbiamo anche il data space che considera, presa una cache con una dimensione, quali locazioni producono hit e miss.
+
+Se il numero di righe o colonne è maggiore delle linee di cache, sto creando un conflitto perché mappo sulla stessa linea
+un indirizzo diverso. Quindi questo algoritmo naive di trasposizione genera solo delle miss.
+
+### Locality analysis
+
+Analisi statica per modificare le iterazioni dell'array o il layout dei dati per ottimizzare. Per gli interi non ci sono
+mai problemi, per operazioni in aritmetica finita o floating point anche l'ordine è importante.
+
+Approximate computing: si sfrutta l'idea che le applicazioni siano tolleranti, quindi riscrivo l'applicazione in modo
+che possa essere riorganizzata tenendo sotto controllo la variabilità tra errore e soluzione.
+
+La **data dependence analysis** permette di capire se il programma è formalmente corretto dopo aver applicato le
+trasformazioni.
+
+## Tecniche di ottimizzazione
+
+La tecnica più semplice è quella di loop interchange: se l'algoritmo è row-major, si scambia l'ordine di attraversamento
+per lavorare in modo più fine sulle righe, che sono mappate nella cache. Si chiama anche loop queueing o permutation.
+
+È propedeutico anche ad altre analisi. Più mi sposto all'interno di un loop più sfrutterò il cosiddetto parallelismo a
+grana fine, mentre spostandomi all'esterno ho parallelismo a grana grossa.
+
+Le GPU sono pesantemente parallele a grado finissimo, infatti dividono i dati da processare su tutti i processi.
+
+### Coarse-grained parallelism
+
+Se invece sto cercando di usare parallelismo a grana grossa, qullo che succede a livello di thread.
+La cosa più adatta è quindi tagliare "per righe" che vengono assegnate ai vari processori. Per identificare questa
+forma di parallelismo si lavora a livello più esterno.
+
+Bisogna anche vedere qual è l'overhead di avviare un nuovo thread.
+
+### Matrix multiplication
+
+Calcolare una cella del risultato prevede di accedere a un'intera riga di A, che potrebbe non stare in cache, e a un'intera
+colonna di B che potrebbe avere una località spaziale povera.
+
+Da qui l'idea di tiling/blocking, altero la struttura dati per sfruttare tutto il riuso: prima su porzioni che stanno
+all'interno della cache.
+
+Supponiamo che in cache ci stiano N righe di M byte, allora processo la struttura come se fosssero blocchi N*M.
+Alteriamo l'iteration space per catturare la località del programma e massimizzare l'uso della cache.
+
+Dal punto di vista del codice il tiling inserisce livelli extra del loop (in una matrix multiplication ne inserisce 2)
+e adesso processo N blocchi dove N è la lunghezza di una riga di A diviso per la riga di cache.
+Si ottengono due ordini di grandezza nel fare questa ottimizzazione.
+
+In CUDA le cache sono esplicitamente gestite, a differenza di ciò che stiamo facendo qua dove le cache sono trasparenti.
+
+## Loop fusion
+
+Loop con iteration space della stessa dimensione e pattern di accesso, nonché lo stesso stride (incremento sulle variabili)
+possono essere fusi.
+
+Il programma esibisce la località temporale perché sto riusando la matrice `a`.
+
+```c
+for (i=0; i<N; i++)
+    for (j=0; j<N; j++)
+        a[i][j] = 1 / b[i][j] * c[i][j]
+
+for (i=0; i<N; i++)
+    for (j=0; j<N; j++)
+        d[i][j] = a[i][j] + c[i][j]
+```
+
+Sfrutta la località temporale? Ovvero nel secondo loop non ho cache miss quando accedo ad A?
+L'affermazione è vera solo se tutta la matrice A può essere contenuta nella cache, ovvero la sua memory footprint è
+inferiore alla dimensione della cache.
+
+In questa formulazione, se A è maggiore della dimensione della cache, alcuni accessi in memoria comportanto delle eviction
+causate da un cache miss.
+
+Il secondo loop ricomincia quindi "da capo" ad accedere alla memoria, quindi non cattura la località temporale.
+
+È un caso rarissimo che le matrici stiano all'interno della cache. In che modo la loop fusion può aiutarci a sfruttare la
+località temporale?
+
+Se riscrivo il problema così, ho la garanzia di aver avvicinato quando scrivo il valore in A e quando lo uso. Far passare
+tanto tempo potrebbe significare un'eviction della cache.
+
+```c
+for (i=0; i<N; i++)
+    for (j=0; j<N; j++)
+        a[i][j] = 1 / b[i][j] * c[i][j]
+        d[i][j] = a[i][j] + c[i][j]
+```
+
+Anticipare l'uso del dato garantisce che esso sarà ancora in cache quando lo dovrò usare.
+
+Prima di ottimizzare devo capire la footprint della struttura in cache. Analizzo gli indici:
+
+- inizio, fine, incremento. La footprint equivale a $(fine - inizio) / incremento$.
+
+## Software prefetching
+
+> L'idea di fondo è che se mi porto in anticipo in cache dei dati, essi saranno presenti non appena mi vengono richiesti.
+
+Quindi ammortizzo la latenza di caricare i dati.
+
+Nel codice posso caricare delle operazioni prefetching esplicito, spostando il dato "vicino" al processore prima del
+momento in cui sarà necessario averlo.
+
+Lo scopo delle operazioni di prefetch è quello di sfruttare operazioni per triggerare un fetch anticipato nella gerarchia
+di cache.
+
+Ci sono due problemi principali: quali sono i punti dove fare prefetch nel codice. Posto che un fetch prende N cicli, allora
+posso partire ponendo la prefetch distance a N cicli prima della load.
+Se metto tutte le load all'inizio potrei fare cache trashing, ovvero la riempio di roba inutile.
+
+Faccio un ragionamento analogo a quello del loop fusion: il prefetching è un bilancio tra anticipo e distanza nel tempo,
+perché potrebbe accadere una eviction. La probabilità che qualcosa succeda non è nemmeno sotto il nostro controllo perché
+in un sistema operativo moderno avvengono anche dei context switch.
+
+Trasformazioni che rendono espliciti il numero di cicli, permettono di semplificare il calcolo del prefetching: loop unroll
+e software pipelining.
+
+### Software pipelining
+
+Le iterazioni di un loop sono un distanziatore tra prefetch e load: sia $l$ la latenza della memoria e $s$ il percorso più
+breve all'interno del loop, allora posso fare software pipelining.
+
+Il loop viene diviso in _prologue_, _steady-state_ e _epilogue_:
+
+- nel prologo si fanno X prefetch, dove X è sono le _iteration ahead_;
+
+- nel steady state si fanno prefetch di i+X, ma si fanno N-X iterazioni;
+
+- nell'epilogo non si fanno prefetch ma solo operazioni, quelle di coda che hanno i dati prefetched.
