--- a/4.Trasformazioni.md
+++ b/4.Trasformazioni.md
@@ -19,6 +19,13 @@ gli usi di una certa definizione.
 Una classe Instruction eredita sia da Value che da User, quindi c'è un legame tra istruzioni e i loro utilizzi.
 Ogni istruzione è uno user di qualche definizione, e uno usee di qualcuno ovvero è utilizzata da qualcun'altro.
 
+Il fatto di ereditare da Value rende la nostra istruzione uno _usee_, nel senso che verrà utilizzata da qualche altra
+istruzione. Il sito in cui viene utilizzata viene detto use, e l'entità che la utilizza è lo User.
+
+Gli usi di uno User (di una Instruction) sono i suoi operand, e si scorrorono con `op_begin`...
+
+Gli utilizzatori di un Value sono i suoi user, si scorrono con l'iteratore `users`.
+
 Ipotizziamo di avere il seguente codice C:
 
 ```c
