--- a/5.Scope.md
+++ b/5.Scope.md
@@ -30,6 +30,8 @@ int main() {
 Rimuovere l'istruzione di print non modifica la semantica del programma, intesa come manipolazione pura della memoria,
 ma ha dei side-effects. Non sta alterando lo stato del programma, ma ha un side effect comunque importante.
 
+> Rappresentano dead code le istruzioni prive di side effects che definiscono variabili mai utilizzate (senza usi).
+
 ### Algoritmo
 
 Dobbiamo ragionare su quelle che sono le variabili utilizzate e aggiungere i suoi operandi a un array "used".
