--- a/10.LICM.md
+++ b/10.LICM.md
@@ -50,3 +50,8 @@ Quindi per fare code motion devo:
 
 - trovare le uscite del loop (ovvero i successori dal loop - facendo il walk riesco sempre a determinare se un blocco è
 all'interno o all'esterno del loop).
+
+Un'istruzione candidata per la code motion definisce una volta e per tutte la variabile nel suo LHS.
+
+Una volta significa che domina tutte le uscite nel loop. Per tutte che non ci sono altre definizioni e l'istruzione domina tutti gli usi o non ci sono altre reaching
+definitions.
