--- a/8.Loops.md
+++ b/8.Loops.md
@@ -8,7 +8,8 @@ però nel caso <slide 5> ho un ciclo "strano", dove entro in un loop in due punt
 
 ## Dominanza
 
-> Un nodo d domina un nodo n in un grafo ($d \text{dom} n) se 
+> Un nodo d domina un nodo n in un grafo ($d \text{ dom } n$) se ciascun percorso
+da entry a n passa per d. Trivially dominance: ogni nodo domina se stesso.
 
 Costruisco un dominator tree, per rappresentare le relazioni di dominanza. A è collegato a B se e solo se A domina
 immediatamente B. Il nodo entry è la radice, ogni nodo D domina solo i suoi discendenti nell'albero.
